Fix hamburger visibility issue #11

--- a/assets/css/gus_ui.css
+++ b/assets/css/gus_ui.css
@@ -5335,7 +5335,8 @@ th.hide-for-touch {
 #ht-sub-menu {
   position: fixed;
   top: 0;
-  padding-top: 100px; }
+  padding-top: 145px;
+  overflow: initial; }
   #ht-sub-menu .fa {
     margin-right: 20px; }
   #ht-sub-menu div {
