--- a/assets/css/sass/_menu.scss
+++ b/assets/css/sass/_menu.scss
@@ -1,9 +1,9 @@
 
 #ht-sub-menu {
- 
   position: fixed;
   top: 0;
-  padding-top: 100px;
+  padding-top: 145px;
+  overflow: initial;
   .fa{
     margin-right: 20px;
   }
